chore: fix broken migration sequence
